--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -267,9 +267,9 @@ action_join_online_storage.key=B
 #orig#action_join_online_storage.name=Join
 action_join_online_storage.name=Speichern
 
-##action_link_directory.description=Link directory to an existing folder
-##action_link_directory.key=L
-##action_link_directory.name=Link
+action_link_directory.description=Directory mit bestehendem Folder verknüpfen
+action_link_directory.key=V
+action_link_directory.name=Verknüpfen
 
 #orig#action_members_refresh.description=Refresh member list and permissions
 action_members_refresh.description=L\u00e4dt die Liste der Mitglieder und Berechtigungen neu
@@ -757,7 +757,7 @@ dialog.delete_profile.title=Eigenen Transfer Modus l\u00f6schen
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=Schwerer Fehler
-##dialog.link_folder_online.select_text=Select non-local folder
+dialog.link_folder_online.select_text=Folder auswählen
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 #orig#dialog.node_select.hide_offline.name=Hide offline
@@ -907,7 +907,7 @@ exp_folder_view.files_available_tip=Verf\u00fcgbare Dateien ansehen
 exp_folder_view.folder_local_online_text=Lokaler Folder, online gesichert
 #orig#exp_folder_view.folder_local_text=Local folder
 exp_folder_view.folder_local_text=Lokaler Folder
-##exp_folder_view.folder_online_text=Non-local folder
+exp_folder_view.folder_online_text=Nicht-lokaler Folder
 #orig#exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.folder_preview_text=Vorschau Folder
 #orig#exp_folder_view.last_synchronized=Last sync\: {0}
@@ -1186,7 +1186,7 @@ folder_remove.dialog.button.name=Entfernen
 folder_remove.dialog.delete=Metadaten l\u00f6schen
 #orig#folder_remove.dialog.remove_from_local=Stop sync locally
 folder_remove.dialog.remove_from_local=Nicht mehr lokal synchronisieren
-##folder_remove.dialog.remove_from_os=Remove from folders
+folder_remove.dialog.remove_from_os=Online löschen
 #orig#folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.sync_warning=Dieser Folder wird gerade synchronisiert\!
 #orig#folder_remove.dialog.text=Remove Folder {0}?
@@ -1207,8 +1207,8 @@ folder_repository.warn_on_close_eta.text=Diese Folder wurden noch nicht fertig s
 folders_list.collapse_hint=Gruppe zuklappen
 #orig#folders_list.expand_hint=Expand group
 folders_list.expand_hint=Gruppe ausklappen
-##folders_list.local_folders=Local folders
-##folders_list.online_folders=Non-local folders
+folders_list.local_folders=Lokale Folder
+folders_list.online_folders=Nicht-lokale Folder
 
 #orig#folders_tab.no_folders_available=No folders available
 folders_tab.no_folders_available=Keine Folder verf\u00fcgbar
@@ -1438,9 +1438,9 @@ line_speed.unlimited=Unbegrenzt
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=Up
 
-##link_folder.dialog.description=Select an folder to sync local.
-##link_folder.dialog.link_text=Link
-##link_folder.dialog.title=Link to an existing folder
+link_folder.dialog.description=Welcher Folder soll in dieses Verzeichnis synchronisiert werden?
+link_folder.dialog.link_text=V
+link_folder.dialog.title=Mit Folder verknüpfen
 
 #orig#low_memory.configure_failure={APPNAME} was unable to configure additional memory.
 low_memory.configure_failure={APPNAME} konnten keine h\u00f6heren Hauptspeicher-Einstellungen installieren.
@@ -2134,7 +2134,7 @@ settings_tab.folder_not_empty=Folder {0} ist nicht leer.
 settings_tab.folder_not_empty.title=Folder nicht leer
 #orig#settings_tab.ignore_patterns=Ignore patterns
 settings_tab.ignore_patterns=Datei-Muster Ausschl\u00fcsse
-##settings_tab.local_folder_location=Local directory
+settings_tab.local_folder_location=Lokales Verzeichnis
 #orig#settings_tab.move_content=Also move current folder contents?
 settings_tab.move_content=Auch Inhalt verschieben?
 #orig#settings_tab.move_content.dont=Do Not Move Contents
@@ -2675,10 +2675,10 @@ wizard.multi_folder_setup.no_name.text=Kein Name f\u00fcr {0} eingegeben
 wizard.multi_folder_setup.no_name.title=Kein Name
 #orig#wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.title=Folder konfigurieren
-##wizard.multi_online_storage_setup.local_folder_location=Local directory
+wizard.multi_online_storage_setup.local_folder_location=Lokales Verzeichnis
 #orig#wizard.multi_online_storage_setup.select_directory=Select directory
 wizard.multi_online_storage_setup.select_directory=Verzeichnis ausw\u00e4hlen
-##wizard.multi_online_storage_setup.title=Configure folder(s)
+wizard.multi_online_storage_setup.title=Folder einrichten
 #orig#wizard.pfwizard.folder_title=Folder Wizard
 wizard.pfwizard.folder_title=Assistent
 ##wizard.pfwizard.invitation_title=Invitation Wizard
@@ -2690,8 +2690,8 @@ wizard.pfwizard.folder_title=Assistent
 wizard.project_name.folder_project_success=Die Projektsynchronisation wurde erfolgreich eingerichtet\!\n
 #orig#wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
 wizard.select_online_storage.desktop_shortcut.text=Desktop Verkn\u00fcpfung erstellen
-##wizard.select_online_storage.info=Please select folders to sync to this computer.
-##wizard.select_online_storage.title=Select Folders
+wizard.select_online_storage.info=Welche Folder sollen mit diesem Computer synchronisiert werden?
+wizard.select_online_storage.title=Folder auswählen
 #orig#wizard.send_invitations.add_message.text=Add a message
 wizard.send_invitations.add_message.text=Nachricht hinzuf\u00fcgen
 #orig#wizard.send_invitations.add_message.tip=Add a message for the recipient
@@ -2794,7 +2794,7 @@ wizard.what_to_do.load_invite.tip=Einen Folder einrichten mittels Einladungs-Dat
 wizard.what_to_do.more=Mehr Optionen anzeigen
 ##wizard.what_to_do.more.tip=Shows advance options
 ##wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
-##wizard.what_to_do.no_os_text=There are no folders available\nfor syncing with this computer.
+wizard.what_to_do.no_os_text=Keine Folder verfügbar, die mit diesem\nComputer synchronisert werden könnten.
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.open_online_documentation=Dokumentation \u00f6ffnen
 #orig#wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up {APPNAME}
