--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -885,7 +885,7 @@ general.synchonisation=Synchronisatie
 #orig#general.time=%02d\:%02d\:%02d
 general.time=%02d\:%02d\:%02d
 #orig#general.today=Today
-general.today=gisteren
+general.today=vandaag
 ##general.tomorrow=Tomorrow
 ##general.transfer_mode=Transfer mode
 ##general.tuesday=Tuesday
@@ -893,7 +893,7 @@ general.today=gisteren
 ##general.wednesday=Wednesday
 ##general.what_is_this=What is this?
 #orig#general.yesterday=Yesterday
-general.yesterday=vandaag
+general.yesterday=gisteren
 
 #orig#image_file_info.resolution=Resolution
 image_file_info.resolution=Resolutie
