Minor text changes

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1955,7 +1955,7 @@ pro.status_tab.remaining.tips=Ihre Lizenz wird in {0} auslaufen
 #orig#pro.status_tab.renew_license=Renew {APPNAME}
 pro.status_tab.renew_license=Lizenz verl\u00e4ngern
 #orig#pro.status_tab.upgrade_powerfolder=Buy {APPNAME} now
-pro.status_tab.upgrade_powerfolder={APPNAME} bestellen
+pro.status_tab.upgrade_powerfolder={APPNAME} kaufen
 #orig#pro.system_service.description=Configure to run as system service
 pro.system_service.description=Als Systemdienst einrichten
 #orig#pro.system_service.name=System Service
@@ -2021,11 +2021,11 @@ pro.wizard.activation.number_of_computers=Erlaubte Computer
 #orig#pro.wizard.activation.one_key_available=Login successful. One license key found.
 pro.wizard.activation.one_key_available=Login erfolgreich. Ein Lizenzschl\u00fcssel gefunden
 #orig#pro.wizard.activation.order_additional=Order additional licenses here
-pro.wizard.activation.order_additional=Hier weitere Lizenzschl\u00fcssel bestellen
+pro.wizard.activation.order_additional=Hier weitere Lizenzschl\u00fcssel kaufen
 #orig#pro.wizard.activation.order_now=Buy {APPNAME} now
-pro.wizard.activation.order_now={APPNAME} hier bestellen
+pro.wizard.activation.order_now={APPNAME} hier kaufen
 #orig#pro.wizard.activation.password_confirm=Confirm
-pro.wizard.activation.password_confirm=Passwort best\u00e4tigen
+pro.wizard.activation.password_confirm=Wiederholen
 #orig#pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
 pro.wizard.activation.password_length=G\u00fcltige Email und Password mit mindesten 6 Zeichen ben\u00f6tigt
 #orig#pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
@@ -2561,7 +2561,7 @@ wizard.choose_disk_location.maual_sync=Manuell synchronisieren
 #orig#wizard.choose_disk_location.options=Please select required options
 wizard.choose_disk_location.options=Optionen ausw\u00e4hlen
 #orig#wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
-wizard.choose_disk_location.os_over_size=Warnung - Online speicher k\u00f6nnte \u00fcberbelegt werden
+wizard.choose_disk_location.os_over_size=Warnung - Erlaubte Kapazität k\u00f6nnte \u00fcberbelegt werden
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=Bitte w\u00e4hlen Sie das Verzeichnis
 #orig#wizard.choose_disk_location.select_file=Select file
@@ -2739,7 +2739,7 @@ wizard.webservice.enter_account=Bitte geben Sie Ihre Daten zum Login in den Onli
 #orig#wizard.webservice.learn_more=What is online storage?
 wizard.webservice.learn_more=Was ist der Online Speicher?
 #orig#wizard.webservice.login=Login
-wizard.webservice.login=Online Speicher Login
+wizard.webservice.login=Login
 #orig#wizard.webservice.mirror_folder=Back up this folder online?
 wizard.webservice.mirror_folder=Diesen Folder online sichern
 #orig#wizard.webservice.mirror_setup=Backup folder online
