Buy now optimizations

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2561,7 +2561,7 @@ wizard.choose_disk_location.maual_sync=Manuell synchronisieren
 #orig#wizard.choose_disk_location.options=Please select required options
 wizard.choose_disk_location.options=Optionen ausw\u00e4hlen
 #orig#wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
-wizard.choose_disk_location.os_over_size=Warnung - Erlaubte Kapazität k\u00f6nnte \u00fcberbelegt werden
+wizard.choose_disk_location.os_over_size=Erlaubte Kapazität k\u00f6nnte \u00fcberbelegt werden. Kauf empfohlen.
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=Bitte w\u00e4hlen Sie das Verzeichnis
 #orig#wizard.choose_disk_location.select_file=Select file
