Buy now optimizations

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1995,7 +1995,7 @@ pro.wizard.activation.error_reading_file=Kann Lizenzschl\u00fcssel nicht lesen
 #orig#pro.wizard.activation.error_unable_to_read=Unable to read
 pro.wizard.activation.error_unable_to_read=Fehler beim Lesen
 #orig#pro.wizard.activation.key_abuse=Too many computers. Please upgrade to continue.
-pro.wizard.activation.key_abuse=Mehr Computer als erlaubt gefunden. Bitte Lizenz erweitern.
+pro.wizard.activation.key_abuse=Mehr Computer als erlaubt gefunden.
 #orig#pro.wizard.activation.key_expired=Your license key has expired\!
 pro.wizard.activation.key_expired=Ihr Lizenzschl\u00fcssel ist abgelaufen\!
 #orig#pro.wizard.activation.key_file=License key file
